[gd_scene load_steps=4 format=3 uid="uid://cec8ie7ufvujw"]

[ext_resource type="Script" path="res://scripts/buttons.gd" id="1_tplv5"]
[ext_resource type="Texture2D" uid="uid://b3u8rv87t5k1q" path="res://assets/sprites/button-1.png" id="2_bb0hq"]
[ext_resource type="Texture2D" uid="uid://bpe4uow5hnwor" path="res://assets/sprites/button-2.png" id="3_0febg"]

[node name="Buttons" type="Node2D"]
position = Vector2(0, 8)
script = ExtResource("1_tplv5")

[node name="ButtonLeft" type="TouchScreenButton" parent="."]
modulate = Color(1, 1, 1, 0.509804)
position = Vector2(-8, -48)
scale = Vector2(4, 4)
texture_normal = ExtResource("2_bb0hq")
texture_pressed = ExtResource("3_0febg")
metadata/_edit_use_anchors_ = true

[node name="ButtonRight" type="TouchScreenButton" parent="."]
modulate = Color(1, 1, 1, 0.509804)
position = Vector2(88, -48)
scale = Vector2(4, 4)
texture_normal = ExtResource("2_bb0hq")
texture_pressed = ExtResource("3_0febg")
metadata/_edit_use_anchors_ = true

[node name="ButtonJump" type="TouchScreenButton" parent="."]
modulate = Color(1, 1, 1, 0.509804)
position = Vector2(456, -48)
scale = Vector2(4, 4)
texture_normal = ExtResource("2_bb0hq")
texture_pressed = ExtResource("3_0febg")
metadata/_edit_use_anchors_ = true

[node name="ButtonAction" type="TouchScreenButton" parent="."]
modulate = Color(1, 1, 1, 0.509804)
position = Vector2(456, -136)
scale = Vector2(4, 4)
texture_normal = ExtResource("2_bb0hq")
texture_pressed = ExtResource("3_0febg")
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="ButtonLeft" to="." method="_on_button_left_pressed"]
[connection signal="released" from="ButtonLeft" to="." method="_on_button_left_released"]
[connection signal="pressed" from="ButtonRight" to="." method="_on_button_right_pressed"]
[connection signal="released" from="ButtonRight" to="." method="_on_button_right_released"]
[connection signal="pressed" from="ButtonJump" to="." method="_on_button_jump_pressed"]
[connection signal="released" from="ButtonJump" to="." method="_on_button_jump_released"]
[connection signal="pressed" from="ButtonAction" to="." method="_on_button_action_pressed"]
[connection signal="released" from="ButtonAction" to="." method="_on_button_action_released"]
